feat(components): add reference-number input for product-purchase. Add two-way mode for components

--- a/Components/AddNewMember/AddNewMemberView.axaml
+++ b/Components/AddNewMember/AddNewMemberView.axaml
@@ -334,7 +334,7 @@
 											Classes="h4" />
 										<TextBox
 											Classes="Clearable"
-											Text="{CompiledBinding ReferenceNumber}"
+											Text="{CompiledBinding ReferenceNumber, Mode=TwoWay}"
 											Width="280"/>
 									</StackPanel>
 									<Button
@@ -979,7 +979,7 @@
 											Classes="h4" />
 										<TextBox
 											Classes="Clearable"
-											Text="{CompiledBinding ReferenceNumber}"
+											Text="{CompiledBinding ReferenceNumber, Mode=TwoWay}"
 											Width="280"/>
 									</StackPanel>
 									<Button
